# sc_analysis_template

./: .buildinfo  .editorconfig  .envrc  .gitignore  .lintr  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  genindex.html  index.html  objects.inv  pyproject.toml  ruff.toml  search.html  searchindex.js  template.html
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/workflows/: book.yml  lint.yml  test-template.yml  test.yml
_sources/: index.md  template.ipynb
hooks/: _check_import_calls.py  _sync_precommit_configs.py  post_gen_project.py  pre_gen_project.py
notebooks/: _config.yml  _toc.yml  myst.yml  template.ipynb
scripts/: template.py
scripts/templates/: template.R
src/fancypackage/: __init__.py
src/fancypackage/core/: __init__.py  _io.py  _logging.py
src/fancypackage/io/: __init__.py  _dask.py  _zarr.py
src/fancypackage/plotting/: __init__.py  _embedding.py  _styles.py
src/fancypackage/stats/: __init__.py  _stats.py
{{ cookiecutter.project_name }}/: .envrc  .gitignore  .pre-commit-config.yaml  .set_gh_remote.sh  .sync_readme_to_index.sh  AGENTS.md  LICENSE  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.claude/: CLAUDE.md
{{ cookiecutter.project_name }}/.github/workflows/: book.yml
{{ cookiecutter.project_name }}/notebooks/: index.md  myst.yml  template.ipynb
{{ cookiecutter.project_name }}/notebooks/_static/: custom.css
{{ cookiecutter.project_name }}/scripts/: template.py
{{ cookiecutter.project_name }}/scripts/r/: _constants.R  _io.R  _setup.R
{{ cookiecutter.project_name }}/scripts/templates/: template.R
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/: _import_shim.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/core/: _constants.py  _logging.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/io/: __init__.py  _dask.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/plotting/: _embedding.py  _styles.py
