[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "fancypackage"
version = "0.0.1"
description = "Fancy Package"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Jane Doe", email = "jane.doe@usa.com" },
]
authors = [
  { name = "Jane Doe" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anndata>=0.12.5",
  "dask",
  "scanpy",
  "zarr>3",
]
urls.Documentation = "https://todo.com"
urls.Home-page = "https://github.com/url/to/repo.git"
urls.Source = "https://github.com/url/to/repo.git"

[dependency-groups]
dev = [
  "pre-commit",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",
]
jupyter = [
  "ipywidgets",
  "jupyterlab",
]

[tool.hatch]
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.hatch-test.dependency-groups = [ "dev", "test" ]
envs.hatch-test.matrix = [
  # Test the lowest and highest supported Python versions with normal deps
  { deps = [ "stable" ], python = [ "3.11", "3.14" ] },
  # Test the newest supported Python version also with pre-release deps
  { deps = [ "pre" ], python = [ "3.14" ] },
]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
envs.hatch-test.overrides.matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."scripts/*" = [ "B018" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.isort.no-lines-before = [ "local-folder" ]
lint.isort.order-by-type = false
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "num",
  "plot",
  "bio",
  "first-party",
  "local-folder"
]
lint.isort.sections.bio = [ "anndata", "scanpy", "scvi" ]
lint.isort.sections.known-third-party = [ "dask", "zarr" ]
lint.isort.sections.num = [
  "jax",
  "networkx",
  "numba",
  "numpy",
  "pandas",
  "pyro",
  "scipy",
  "sklearn",
  "statmodels",
  "torch"
]
lint.isort.sections.plot = [ "matplotlib", "mplscience", "mpl_toolkits", "seaborn" ]
lint.pydocstyle.convention = "numpy"

[tool.jupytext]
notebook_metadata_filter = "-all,-jupytext.text_representation"
cell_metadata_filter = "-all"
formats."notebooks/" = "ipynb"
formats."scripts/" = "py:percent"
